--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "monk": "~1.0.1"
+    "monk": "~1.0.1",
+    "mongoose": "~4.3.7"
   }
 }
